added motion to skeleton

--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -2,7 +2,7 @@
 
 </div>
 
-<div class="card flex-column-all-center sk" *ngIf="isSkeleton">
+<div class="card flex-column sk" *ngIf="isSkeleton">
   <div class="sk__img"></div>
   <div class="sk__heading"></div>
   <div class="sk__desc"></div>
