--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -7,21 +7,38 @@
 .sk{
   position: relative;
   gap: $gutter1_2;
+
+  & div {
+    overflow: hidden;
+    position: relative;
+    background-color: rgba(120, 120, 120, 0.4);
+
+    &:after {
+      @include sudo-fill(absolute, 0, 0, 0, 0);
+      transform: translateX(-100%);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.2) 20%, rgba(255, 255, 255, 0.5) 60%, rgba(255, 255, 255, 0));
+      animation: shimmer 2s infinite;
+    }
+  }
+
   &__img {
-    background-color: gray;
     height: 280px;
-    width: 200px;
+    width: 100%;
   }
 
   &__heading {
-    background-color: gray;
     height: 6px;
     width: calc(100% - 20px);
   }
 
   &__desc {
-    background-color: gray;
     height: 5px;
     width: calc(100% - 50px);
+  }
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
   }
 }
