added redirectLinking confirmation in global Services

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
   </div>
 
   <div class="credits flex-column">
-    <a href="https://www.linkedin.com/in/sumant-dusane-8a10771a7">
+    <a (click)="globalservice.redirectToLink('https://www.linkedin.com/in/sumant-dusane/')">
       Sumant Dusane
       <img src="../../../assets/images/sumant.jpeg" alt="Sumant Dusane">
     </a>
