--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="movies container flex-column">
-  <h1 class="title-thin">Explore Movies</h1>
+  <h1 class="title-thin movies__title">Explore Movies</h1>
 
   <div class="movies__tiles">
     <ng-container *ngIf="!isSkeleton">
