--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,14 +1,13 @@
 @import "./../../../assets/mixin";
 
-.title-thin {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: $font-weight200;
-}
-
 .movies {
   margin-left: 20%;
   margin-top: 80px;
   padding: $gutter $gutter3x;
+
+  &__title {
+    margin: $gutter2x 0
+  }
 
   &__tiles {
     @include grid-layout(repeat(2, 1fr), repeat(5, 1fr));
