--- a/src/assets/_commons.scss
+++ b/src/assets/_commons.scss
@@ -1,8 +1,14 @@
 .title-thin {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: $font-weight200;
+  font-weight: $font-weight300;
 }
 
 .container {
   margin: $gutter $gutter3x;
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
+  }
 }
