--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="root-container">
   <app-navbar class="navbar"></app-navbar>
   <app-side-bar class="sidebar"></app-side-bar>
-  <app-home class="explore"></app-home>
 </div>
+<router-outlet></router-outlet>
