--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="movies container flex-column">
-  <h1 class="title-thin movies__title">Explore Movies</h1>
-
+  <h1 class="title-thin mv-2">Explore Movies</h1>
   <div class="movies__tiles">
     <ng-container *ngIf="!isSkeleton">
       <app-movie-card [isSkeleton]="false" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]"></app-movie-card>
@@ -10,5 +9,4 @@
       <app-movie-card [isSkeleton]="true" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]"></app-movie-card>
     </ng-container>
   </div>
-
 </div>
