--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -4,17 +4,20 @@
 
 .sidebar {
   @include sudo-fill(fixed, 0, unset, 0, 0);
-  width: 20%;
+  width: 16%;
   padding-top: 80px;
   background-color: darken($color: $dark, $amount: 5);
   z-index: $z-index-l;
 
-  &__content {
-    @include reset-lists;
+  &__content li {
+    cursor: pointer;
+    padding: $gutter2x $gutter $gutter2x $gutter2x;
+    gap: $gutter;
+    transition: $transition-in;
 
-    li {
-      padding: $gutter2x $gutter $gutter2x $gutter2x;
-      gap: $gutter;
+      &:hover {
+        font-size: $font-size-base;
+      }
 
       &.active {
         position: relative;
@@ -29,6 +32,5 @@
         //   // content: '\0279E';
         // }
       }
-    }
   }
 }
