--- a/src/assets/_reset.scss
+++ b/src/assets/_reset.scss
@@ -1,4 +1,4 @@
-@mixin reset-lists {
+ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -41,7 +41,7 @@ input {
   outline: 0;
 }
 
-button, li, a {
+button, a {
   cursor: pointer;
 }
 
