--- a/src/app/components/watch-later/watch-later.component.html
+++ b/src/app/components/watch-later/watch-later.component.html
@@ -8,7 +8,9 @@
       </div>
       <div class="watch-later__name">{{'Sherlock Holmes: Lost Era'}}</div>
       <div class="watch-later__close">
-        <button>X</button>
+        <button>
+          <fa-icon [icon]="iconDelete"></fa-icon>
+        </button>
       </div>
     </li>
   </ul>
