--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,8 @@
 
   <div class="search-bar flex-row-all-center">
     <fa-icon [icon]="searchIcon"></fa-icon>
-    <input type="text" class="search-bar--input" placeholder="Search for Movies">
+    <input type="text" class="search-bar--input" placeholder="Search for Movies" [(ngModel)]="movieName">
+    <a routerLink="/home/{{movieName}}" type="submit">Enter</a>
   </div>
 
   <div class="credits flex-column">
