--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,13 @@
 <div class="movies container flex-column">
-  <h1 class="title-thin mv-2">Explore Movies</h1>
+  <h1 class="title-thin mt-2 mb-1">Explore Movies</h1>
   <div class="movies__tiles">
     <ng-container *ngIf="!isSkeleton">
-      <app-movie-card [isSkeleton]="false" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]"></app-movie-card>
+      <app-movie-card [bundle]="item" [isSkeleton]="false" *ngFor="let item of searchData"></app-movie-card>
     </ng-container>
 
+
     <ng-container *ngIf="isSkeleton">
-      <app-movie-card [isSkeleton]="true" *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]"></app-movie-card>
+      <app-movie-card [isSkeleton]="true" *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"></app-movie-card>
     </ng-container>
   </div>
 </div>
