--- a/src/app/components/watch-later/watch-later.component.html
+++ b/src/app/components/watch-later/watch-later.component.html
@@ -1,5 +1,5 @@
 <div class="container flex-column">
-  <h1 class="title-thin mv-2">Watch Later</h1>
+  <h1 class="title-thin mt-2 mb-1">Watch Later</h1>
   <ul class="flex-column">
     <li class="watch-later">
       <div class="watch-later__sr-no">
