--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,5 @@
-@import "./../../../assets/mixin";
+@import "../../../assets/variables";
+@import "../../../assets/grid";
 
 .movies__tiles {
   @include grid-layout(repeat(2, 1fr), repeat(5, 1fr));
