--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -65,3 +65,6 @@ $z-index-super: 99999999;
 $transition-in-out: 300ms all ease-in-out;
 $transition-in: 300ms all ease-in;
 $transition-out: 300ms all ease-out;
+
+// shadows
+$box-shadow-large: 0px 0px 32px #00000040;
