--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="movies container flex-column">
+<div class="container flex-column">
   <h1 class="title-thin mt-2 mb-1">Explore Movies</h1>
   <div class="movies__tiles">
     <ng-container *ngIf="!isSkeleton">
