--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -50,6 +50,6 @@
     width: 60px;
     height: auto;
     border-radius: 50%;
-    box-shadow: 0px 0 20px #00000078;
+    box-shadow: $box-shadow-large;
   }
 }
