--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -13,6 +13,11 @@
   min-height: 60px;
   border-radius: $border-radius-normal;
   box-shadow: 0px 0px 18px 1px $pink;
+  transition: all 400ms linear;
+
+  &.collapsed {
+    top: -120px;
+  }
 }
 
 
