--- a/src/app/components/null-state/null-state.component.html
+++ b/src/app/components/null-state/null-state.component.html
@@ -6,6 +6,6 @@
   <ng-container *ngIf="statusCode == 500">
     <img class="card__image" src="../../../assets/images/empty_state.svg" alt="Empty">
     <h1 class="card__title">No Movies Found in {{source}}</h1>
-    <a routerLink="../home/welcome" class="btn-primary card__redirect">Explore Movies &rarr;</a>
+    <a [routerLink]="'../home'" class="btn-primary card__redirect">Explore Movies &rarr;</a>
   </ng-container>
 </div>
