--- a/src/assets/_commons.scss
+++ b/src/assets/_commons.scss
@@ -3,16 +3,38 @@
   font-weight: $font-weight300;
 }
 
+.btn-primary {
+  color: $white;
+  background-color: $pink;
+  border-radius: $border-radius-normal;
+  padding: $gutter1_2 $gutter;
+  transition: $transition-in-out;
+
+  &:hover {
+    background-color: lighten($color: $pink, $amount: 8);
+    transition: $transition-in-out;
+  }
+}
+
 .movies__tiles {
   @include grid-layout(repeat(2, 1fr), repeat(5, 1fr));
   gap: $gutter2x $gutter20;
   margin-top: $gutter20;
 }
 
+.pill {
+  padding: $gutter1_4 $gutter;
+  background-color: brown;
+  font-size: $font-size-xxs;
+
+  &:not(:first-child) {
+    margin-left: $gutter;
+  }
+}
 
 .container {
   margin-left: 16%;
-  margin-top: 60px;
+  margin-top: 80px;
   padding: $gutter $gutter2x;
 }
 
