--- a/src/assets/_sudo.scss
+++ b/src/assets/_sudo.scss
@@ -6,3 +6,11 @@
   bottom: $bottom;
   left: $left;
 }
+
+@mixin element-position($position, $top, $right, $bottom, $left) {
+  position: $position;
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+}
