--- a/src/app/components/movie-detail/movie-detail.component.scss
+++ b/src/app/components/movie-detail/movie-detail.component.scss
@@ -1,6 +1,13 @@
 @import "../../../assets/variables";
 @import "../../../assets/sudo";
 
+.back-btn {
+  @include element-position(absolute, 100px, unset, unset, 24px);
+  width: max-content;
+  height: auto;
+  color: $white;
+}
+
 .backdrop {
   @include element-position(absolute, 80px, 0, 0, 0);
   filter: brightness(.5);
@@ -12,7 +19,7 @@
 .movie {
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   height: 90vh;
   margin: 80px 100px 0 100px;
   padding: $gutter $gutter7x;
@@ -21,12 +28,13 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.295);
   }
   &__trailer {
+    display: flex;
+    justify-content: space-between;
     padding: $gutter $gutter1_2;
     border-top: 1px solid $grey;
     margin-top: $gutter;
     width: 100%;
-
-    button {
+    button, a {
       color: $white;
       transition: $transition-in-out;
       &:hover {
@@ -34,5 +42,20 @@
         transition: $transition-in-out;
       }
     }
+  }
+}
+
+.loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: $gutter;
+  align-items: center;
+  justify-content: center;
+
+  video {
+    padding: $gutter2x;
+    background-color: #bcbcbc24;
   }
 }
