--- a/src/app/components/watch-later-card/watch-later-card.component.html
+++ b/src/app/components/watch-later-card/watch-later-card.component.html
@@ -1,5 +1,5 @@
-<div routerLink="../movie/{{bundle?.id}}" class="card flex-column gap">
-  <a [routerLink]="'../home'" (click)="popFromWatchLater(bundle?.id)" class="card__close"><fa-icon [icon]="iconRemove"></fa-icon></a>
+<div class="card flex-column gap">
+  <button (click)="popFromWatchLater(bundle?.id)" class="card__close"><fa-icon [icon]="iconRemove"></fa-icon></button>
   <img class="card__poster" [src]="imageBaseUrl + bundle?.poster_path" alt={{bundle?.title}}>
   <h3 class="card__title clamp-1">{{bundle?.title}}</h3>
   <div class="card__chips flex-row gap">
